Cherry-pick r234112. rdar://problem/42604514

AX: Press tab to highlight items on a webpage is not working with voiceover enabled
    https://bugs.webkit.org/show_bug.cgi?id=187824

    Reviewed by Zalan Bujtas.

    Source/WebCore:

    We are deferring posting focused element change notification when the document needs a
    style recalculation. However, we only perform the cache update after a layout is completed.
    Added a timer to perform the cache update in the next runloop when non-layout type of mutation
    happens.

    Test: accessibility/mac/tab-focus-post-notification.html

    * accessibility/AXObjectCache.cpp:
    (WebCore::AXObjectCache::AXObjectCache):
    (WebCore::AXObjectCache::~AXObjectCache):
    (WebCore::AXObjectCache::deferFocusedUIElementChangeIfNeeded):
    (WebCore::AXObjectCache::performCacheUpdateTimerFired):
    * accessibility/AXObjectCache.h:
    (WebCore::AXObjectCache::AXObjectCache):
    (WebCore::AXObjectCache::performCacheUpdateTimerFired):

    LayoutTests:

    * accessibility/mac/tab-focus-post-notification-expected.txt: Added.
    * accessibility/mac/tab-focus-post-notification.html: Added.

    Canonical link: https://commits.webkit.org/203092@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234112 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/202900.79@safari-606-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-606-branch@234237 268f45cc-cd09-0410-ab3c-d52691b4dbfc